--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.5.7",
-    "express": "^4.16.3",
-    "faker": "^4.1.0"
+    "express": "^4.16.3"
   }
 }
