--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.17",
